--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,44 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
+}
+:root {
+    --bg-color: green;
+    --text-color: #333;
+    --main-color: black;
+    --white-color: white;
+    --shadow-color: rgba(0, 0, 0, .2);
+
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+
+body {
+    background-color:#e8e8e8;
+    min-height: 100vh;
+    padding-top: 9rem;
+}
+
+
+h2 {
+    padding-top: 5rem;
+    font-weight: 600;
+    font-size: 40px;
+    text-align: center;
+}
+
+section {
+    min-height: 100vh;
+    padding: 10rem 7% 2rem;
+}
