--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,3 +1,4 @@
+<app-navigation></app-navigation>
 <section class="about" id="about">
     <div class="about-img" [ngClass]="{ 'hidden': hideContent }">
         <img src="./assets/image/shein.jpeg" alt="">
