--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,184 +1,182 @@
-  
-  <form class="form" *ngIf="!isSignedIn">
-    <div class="from2">
-      <div class="scene">
-        <div class="forest">
-          <div class="tree tree1">
-            <div class="branch branch-top"></div>
-            <div class="branch branch-middle"></div>
-          </div>
-
-          <div class="tree tree2">
-            <div class="branch branch-top"></div>
-            <div class="branch branch-middle"></div>
-            <div class="branch branch-bottom"></div>
-          </div>
-
-          <div class="tree tree3">
-            <div class="branch branch-top"></div>
-            <div class="branch branch-middle"></div>
-            <div class="branch branch-bottom"></div>
-          </div>
-
-          <div class="tree tree4">
-            <div class="branch branch-top"></div>
-            <div class="branch branch-middle"></div>
-            <div class="branch branch-bottom"></div>
-          </div>
-
-          <div class="tree tree5">
-            <div class="branch branch-top"></div>
-            <div class="branch branch-middle"></div>
-            <div class="branch branch-bottom"></div>
-          </div>
-
-          <div class="tree tree6">
-            <div class="branch branch-top"></div>
-            <div class="branch branch-middle"></div>
-            <div class="branch branch-bottom"></div>
-          </div>
-
-          <div class="tree tree7">
-            <div class="branch branch-top"></div>
-            <div class="branch branch-middle"></div>
-            <div class="branch branch-bottom"></div>
-          </div>
+<form class="form" *ngIf="!isSignedIn">
+  <div class="from2">
+    <div class="scene">
+      <div class="forest">
+        <div class="tree tree1">
+          <div class="branch branch-top"></div>
+          <div class="branch branch-middle"></div>
         </div>
 
-        <div class="tent">
-          <div class="roof"></div>
-          <div class="roof-border-left">
-            <div class="roof-border roof-border1"></div>
-            <div class="roof-border roof-border2"></div>
-            <div class="roof-border roof-border3"></div>
-          </div>
-          <div class="entrance">
-            <div class="door left-door">
-              <div class="left-door-inner"></div>
-            </div>
-            <div class="door right-door">
-              <div class="right-door-inner"></div>
-            </div>
-          </div>
+        <div class="tree tree2">
+          <div class="branch branch-top"></div>
+          <div class="branch branch-middle"></div>
+          <div class="branch branch-bottom"></div>
         </div>
 
-        <div class="floor">
-          <div class="ground ground1"></div>
-          <div class="ground ground2"></div>
+        <div class="tree tree3">
+          <div class="branch branch-top"></div>
+          <div class="branch branch-middle"></div>
+          <div class="branch branch-bottom"></div>
         </div>
 
-        <div class="fireplace">
-          <div class="support"></div>
-          <div class="support"></div>
-          <div class="bar"></div>
-          <div class="hanger"></div>
-          <div class="smoke"></div>
-          <div class="pan"></div>
-          <div class="fire">
-            <div class="line line1">
-              <div class="particle particle1"></div>
-              <div class="particle particle2"></div>
-              <div class="particle particle3"></div>
-              <div class="particle particle4"></div>
-            </div>
-            <div class="line line2">
-              <div class="particle particle1"></div>
-              <div class="particle particle2"></div>
-              <div class="particle particle3"></div>
-              <div class="particle particle4"></div>
-            </div>
-            <div class="line line3">
-              <div class="particle particle1"></div>
-              <div class="particle particle2"></div>
-              <div class="particle particle3"></div>
-              <div class="particle particle4"></div>
-            </div>
+        <div class="tree tree4">
+          <div class="branch branch-top"></div>
+          <div class="branch branch-middle"></div>
+          <div class="branch branch-bottom"></div>
+        </div>
+
+        <div class="tree tree5">
+          <div class="branch branch-top"></div>
+          <div class="branch branch-middle"></div>
+          <div class="branch branch-bottom"></div>
+        </div>
+
+        <div class="tree tree6">
+          <div class="branch branch-top"></div>
+          <div class="branch branch-middle"></div>
+          <div class="branch branch-bottom"></div>
+        </div>
+
+        <div class="tree tree7">
+          <div class="branch branch-top"></div>
+          <div class="branch branch-middle"></div>
+          <div class="branch branch-bottom"></div>
+        </div>
+      </div>
+
+      <div class="tent">
+        <div class="roof"></div>
+        <div class="roof-border-left">
+          <div class="roof-border roof-border1"></div>
+          <div class="roof-border roof-border2"></div>
+          <div class="roof-border roof-border3"></div>
+        </div>
+        <div class="entrance">
+          <div class="door left-door">
+            <div class="left-door-inner"></div>
           </div>
-        </div>
-
-        <div class="time-wrapper">
-          <div class="time">
-            <div class="day"></div>
-            <div class="night">
-              <div class="moon"></div>
-              <div class="star star1 star-big"></div>
-              <div class="star star2 star-big"></div>
-              <div class="star star3 star-big"></div>
-              <div class="star star4"></div>
-              <div class="star star5"></div>
-              <div class="star star6"></div>
-              <div class="star star7"></div>
-            </div>
+          <div class="door right-door">
+            <div class="right-door-inner"></div>
           </div>
         </div>
       </div>
-      <p class="titlez">{{ isSignup ?'SheinTraders' :'Welcome Back' }}</p>
-      <div class="flex-column">
 
-        <label>Email </label>
+      <div class="floor">
+        <div class="ground ground1"></div>
+        <div class="ground ground2"></div>
       </div>
-      <div class="inputForm">
-        <svg height="20" viewBox="0 0 32 32" width="20" xmlns="http://www.w3.org/2000/svg">
-          <g id="Layer_3" data-name="Layer 3">
-            <path
-              d="m30.853 13.87a15 15 0 0 0 -29.729 4.082 15.1 15.1 0 0 0 12.876 12.918 15.6 15.6 0 0 0 2.016.13 14.85 14.85 0 0 0 7.715-2.145 1 1 0 1 0 -1.031-1.711 13.007 13.007 0 1 1 5.458-6.529 2.149 2.149 0 0 1 -4.158-.759v-10.856a1 1 0 0 0 -2 0v1.726a8 8 0 1 0 .2 10.325 4.135 4.135 0 0 0 7.83.274 15.2 15.2 0 0 0 .823-7.455zm-14.853 8.13a6 6 0 1 1 6-6 6.006 6.006 0 0 1 -6 6z">
-            </path>
-          </g>
-        </svg>
-        <input type="text" #email class="input" placeholder="Enter your Email">
-      </div>
-      <br>
 
-      <div class="flex-column">
-        <label>Password </label>
-      </div>
-      <div class="inputForm">
-        <svg height="20" viewBox="-64 0 512 512" width="20" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="m336 512h-288c-26.453125 0-48-21.523438-48-48v-224c0-26.476562 21.546875-48 48-48h288c26.453125 0 48 21.523438 48 48v224c0 26.476562-21.546875 48-48 48zm-288-288c-8.8125 0-16 7.167969-16 16v224c0 8.832031 7.1875 16 16 16h288c8.8125 0 16-7.167969 16-16v-224c0-8.832031-7.1875-16-16-16zm0 0">
-          </path>
-          <path
-            d="m304 224c-8.832031 0-16-7.167969-16-16v-80c0-52.929688-43.070312-96-96-96s-96 43.070312-96 96v80c0 8.832031-7.167969 16-16 16s-16-7.167969-16-16v-80c0-70.59375 57.40625-128 128-128s128 57.40625 128 128v80c0 8.832031-7.167969 16-16 16zm0 0">
-          </path>
-        </svg>
-        <input [type]="passwordVisible ? 'text' : 'password'" class="input" placeholder="Enter your Password "
-          #password>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-          (click)="togglePasswordVisibility()" style="fill: rgba(0, 0, 0, 1);transform: msFilter">
-          <path
-            d="M12 4.998c-1.836 0-3.356.389-4.617.971L3.707 2.293 2.293 3.707l3.315 3.315c-2.613 1.952-3.543 4.618-3.557 4.66l-.105.316.105.316C2.073 12.382 4.367 19 12 19c1.835 0 3.354-.389 4.615-.971l3.678 3.678 1.414-1.414-3.317-3.317c2.614-1.952 3.545-4.618 3.559-4.66l.105-.316-.105-.316c-.022-.068-2.316-6.686-9.949-6.686zM12.043 7H12a5 5 0 0 1 5 5 4.894 4.894 0 0 1-.852 2.734l-.721-.721A3.919 3.919 0 0 0 16 11.999c0-.474-.099-.925-.255-1.349A.985.985 0 0 1 15 11a1 1 0 0 1-1-1c0-.439.288-.802.682-.936A3.965 3.965 0 0 0 12 7.999c-.735 0-1.419.218-2.015.572l-.72-.72C10.053 7.326 10.982 7 12 7h-.043L12 6.998l.043.002zm-7.969 4.999c.103-.235.274-.586.521-.989l5.867 5.867c-4.213-.647-5.939-3.842-6.388-4.878zm9.247 4.908-7.48-7.48a8.146 8.146 0 0 1 1.188-.984l8.055 8.055a8.835 8.835 0 0 1-1.763.409z">
-          </path>
-        </svg>
-      </div>
-      <br>
-      <br>
-
-      <div class="flex-row">
-
-        <p><a (click)="onForgotPassword(email.value)">Forgot Password?</a></p>
-      </div>
-      <button class="button-submit" *ngIf="isSignup" (click)="onSignup(email.value, password.value)">Sign up</button>
-      <button class="button-submit" *ngIf="!isSignup" (click)="onSignin(email.value, password.value)">Login</button>
-      <p>
-        {{ isSignup ? 'Already have an account?' : 'Don\'t have an account?' }}
-        <a (click)="toggleSignup()">{{ isSignup ? 'Login' : 'Sign up' }}</a>
-      </p>
-
-      <div class="ui-abstergo-container">
-
-        <div class="loader" [style.display]="isLoading ? 'block' : 'none'"></div>
-        <div class="signuptext">
-          {{signupMessage}}
-
+      <div class="fireplace">
+        <div class="support"></div>
+        <div class="support"></div>
+        <div class="bar"></div>
+        <div class="hanger"></div>
+        <div class="smoke"></div>
+        <div class="pan"></div>
+        <div class="fire">
+          <div class="line line1">
+            <div class="particle particle1"></div>
+            <div class="particle particle2"></div>
+            <div class="particle particle3"></div>
+            <div class="particle particle4"></div>
+          </div>
+          <div class="line line2">
+            <div class="particle particle1"></div>
+            <div class="particle particle2"></div>
+            <div class="particle particle3"></div>
+            <div class="particle particle4"></div>
+          </div>
+          <div class="line line3">
+            <div class="particle particle1"></div>
+            <div class="particle particle2"></div>
+            <div class="particle particle3"></div>
+            <div class="particle particle4"></div>
+          </div>
         </div>
-        <h5>{{ message }}</h5>
       </div>
 
-
-
-
+      <div class="time-wrapper">
+        <div class="time">
+          <div class="day"></div>
+          <div class="night">
+            <div class="moon"></div>
+            <div class="star star1 star-big"></div>
+            <div class="star star2 star-big"></div>
+            <div class="star star3 star-big"></div>
+            <div class="star star4"></div>
+            <div class="star star5"></div>
+            <div class="star star6"></div>
+            <div class="star star7"></div>
+          </div>
+        </div>
+      </div>
     </div>
-  </form>
+    <p class="titlez">{{ isSignup ?'SheinTraders' :'Welcome Back' }}</p>
+    <div class="flex-column">
+
+      <label>Email </label>
+    </div>
+    <div class="inputForm">
+      <svg height="20" viewBox="0 0 32 32" width="20" xmlns="http://www.w3.org/2000/svg">
+        <g id="Layer_3" data-name="Layer 3">
+          <path
+            d="m30.853 13.87a15 15 0 0 0 -29.729 4.082 15.1 15.1 0 0 0 12.876 12.918 15.6 15.6 0 0 0 2.016.13 14.85 14.85 0 0 0 7.715-2.145 1 1 0 1 0 -1.031-1.711 13.007 13.007 0 1 1 5.458-6.529 2.149 2.149 0 0 1 -4.158-.759v-10.856a1 1 0 0 0 -2 0v1.726a8 8 0 1 0 .2 10.325 4.135 4.135 0 0 0 7.83.274 15.2 15.2 0 0 0 .823-7.455zm-14.853 8.13a6 6 0 1 1 6-6 6.006 6.006 0 0 1 -6 6z">
+          </path>
+        </g>
+      </svg>
+      <input type="text" #email class="input" placeholder="Enter your Email">
+    </div>
+    <br>
+
+    <div class="flex-column">
+      <label>Password </label>
+    </div>
+    <div class="inputForm">
+      <svg height="20" viewBox="-64 0 512 512" width="20" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="m336 512h-288c-26.453125 0-48-21.523438-48-48v-224c0-26.476562 21.546875-48 48-48h288c26.453125 0 48 21.523438 48 48v224c0 26.476562-21.546875 48-48 48zm-288-288c-8.8125 0-16 7.167969-16 16v224c0 8.832031 7.1875 16 16 16h288c8.8125 0 16-7.167969 16-16v-224c0-8.832031-7.1875-16-16-16zm0 0">
+        </path>
+        <path
+          d="m304 224c-8.832031 0-16-7.167969-16-16v-80c0-52.929688-43.070312-96-96-96s-96 43.070312-96 96v80c0 8.832031-7.167969 16-16 16s-16-7.167969-16-16v-80c0-70.59375 57.40625-128 128-128s128 57.40625 128 128v80c0 8.832031-7.167969 16-16 16zm0 0">
+        </path>
+      </svg>
+      <input [type]="passwordVisible ? 'text' : 'password'" class="input" placeholder="Enter your Password " #password>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+        (click)="togglePasswordVisibility()" style="fill: rgba(0, 0, 0, 1);transform: msFilter">
+        <path
+          d="M12 4.998c-1.836 0-3.356.389-4.617.971L3.707 2.293 2.293 3.707l3.315 3.315c-2.613 1.952-3.543 4.618-3.557 4.66l-.105.316.105.316C2.073 12.382 4.367 19 12 19c1.835 0 3.354-.389 4.615-.971l3.678 3.678 1.414-1.414-3.317-3.317c2.614-1.952 3.545-4.618 3.559-4.66l.105-.316-.105-.316c-.022-.068-2.316-6.686-9.949-6.686zM12.043 7H12a5 5 0 0 1 5 5 4.894 4.894 0 0 1-.852 2.734l-.721-.721A3.919 3.919 0 0 0 16 11.999c0-.474-.099-.925-.255-1.349A.985.985 0 0 1 15 11a1 1 0 0 1-1-1c0-.439.288-.802.682-.936A3.965 3.965 0 0 0 12 7.999c-.735 0-1.419.218-2.015.572l-.72-.72C10.053 7.326 10.982 7 12 7h-.043L12 6.998l.043.002zm-7.969 4.999c.103-.235.274-.586.521-.989l5.867 5.867c-4.213-.647-5.939-3.842-6.388-4.878zm9.247 4.908-7.48-7.48a8.146 8.146 0 0 1 1.188-.984l8.055 8.055a8.835 8.835 0 0 1-1.763.409z">
+        </path>
+      </svg>
+    </div>
+    <br>
+    <br>
+
+    <div class="flex-row" *ngIf="showForgotPasswordLink">
+      <p><a (click)="onForgotPassword(email.value)" *ngIf="!isSignup">Forgot Password?</a></p>
+    </div>
+    
+    <button class="button-submit" *ngIf="isSignup" (click)="onSignup(email.value, password.value); hideForgotPasswordLink()">Sign up</button>
+    <button class="button-submit" *ngIf="!isSignup" (click)="onSignin(email.value, password.value)">Login</button>
+    
+    <p>
+      {{ isSignup ? 'Already have an account?' : 'Don\'t have an account?' }}
+      <a (click)="toggleSignup()">{{ isSignup ? 'Login' : 'Sign up' }}</a>
+    </p>
+
+    <div class="ui-abstergo-container">
+
+      <div class="loader" [style.display]="isLoading ? 'block' : 'none'"></div>
+      <div class="signuptext">
+        {{signupMessage}}
+        {{ message }}
+      </div>
+    </div>
+
+
+
+
+  </div>
+</form>
 
 
 
